# artwarp-py

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  INSTALLATION.md  LICENSE  QUICK_REFERENCE.md  README.md  VISUALIZATION.md  oceans.sh  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: ci.yml  sync-wiki.yml
docs/: ENVIRONMENT_SETUP.md  PROJECT_SUMMARY.md  README.md  TEST_RESULTS.md
docs/dev/: ENVIRONMENT_SETUP.md  OCEANS_DEV.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_SUMMARY.md  TEST_RESULTS.md
docs/user/: API.md  ARCHITECTURE.md  INSTALLATION.md  OCEANS.md  QUICK_REFERENCE.md  VISUALIZATION.md
examples/: artwarp_demo.ipynb  simple_example.py  visualization_example.py
examples/artwarp_demo_output/: assignments.csv
examples/data/: CSV001.csv  CSV002.csv  CSV003.csv  CSV004.csv  CSV005.csv
scripts/: compare_categorizations.py  contour_length_comparison.py  extract_mat.py  tune_sarasota_ground_truth.py
src/artwarp/: __init__.py
src/artwarp/cli/: __init__.py  main.py
src/artwarp/core/: __init__.py  art.py  dtw.py  network.py  weights.py
src/artwarp/io/: __init__.py  exporters.py  loaders.py
src/artwarp/oceans/: __init__.py  api.py  auth.py  cli.py  contours.py
src/artwarp/utils/: __init__.py  numba_check.py  resample.py  validation.py
src/artwarp/visualization/: __init__.py  plotting.py
tests/: __init__.py
tests/unit/: __init__.py  test_art.py  test_dtw.py  test_loaders.py  test_matlab_compat.py  test_network.py  test_oceans.py  test_validation.py  test_visualization.py  test_weights.py
