[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artwarp-py"
version = "2.0.3"
description = "High-performance Python implementation of ARTwarp for bioacoustic signal categorization"
readme = "README.md"
requires-python = ">=3.8"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Pedro Gronda Garrigues", email = "pgrondagarrigues@gmail.com"},
]
maintainers = [
    {name = "Pedro Gronda Garrigues"},
]
keywords = ["artwarp", "dtw", "bioacoustics", "clustering", "adaptive-resonance-theory", "animal-sounds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numba>=0.54.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
accelerate = ["numba>=0.54.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
    "isort>=5.10.0",
]
all = [
    "numba>=0.54.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/dolphin-acoustics-vip/artwarp-py"
Documentation = "https://github.com/dolphin-acoustics-vip/artwarp-py/wiki"
Repository = "https://github.com/dolphin-acoustics-vip/artwarp-py"
Changelog = "https://github.com/dolphin-acoustics-vip/artwarp-py/blob/main/CHANGELOG.md"

[project.scripts]
artwarp-py = "artwarp.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.coverage.run]
omit = ["**/__init__.py", "tests/*", "src/artwarp/cli/main.py"]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "matlab: marks tests that require MATLAB",
]
